{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 300,
  "lineage": "d63bb43a-8fee-9b18-7c18-227e345a1456",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker-voting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0144c00a28e5f20bf",
            "arn": "arn:aws:ec2:us-east-1:784905424441:instance/i-0e24f6950a554d121",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdd",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-029f9163b7bf1a899",
                "throughput": 0,
                "volume_id": "vol-0ebb469d81456efcb",
                "volume_size": 12,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e24f6950a554d121",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dockervot",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06939c57ad616f17b",
            "private_dns": "ip-172-1-0-187.ec2.internal",
            "private_ip": "172.1.0.187",
            "public_ip": "44.200.14.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09fd48b25a4f1dbce",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d2616e750b9b4c5d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02bde2e6a6a308b05",
            "tags": {
              "Env": "Desarrollo",
              "name": "Docker Votting"
            },
            "tags_all": {
              "Env": "Desarrollo",
              "name": "Docker Votting"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d2616e750b9b4c5d"
            ]
          },
          "dependencies": [
            "aws_security_group.VotingRGAPP",
            "aws_subnet.DockerApp",
            "aws_vpc.VotingAPP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "DockerVotApp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784905424441:internet-gateway/igw-05d09904f2d23fcae",
            "id": "igw-05d09904f2d23fcae",
            "owner_id": "784905424441",
            "tags": {
              "Name": "IG_DockerVotApp"
            },
            "tags_all": {
              "Name": "IG_DockerVotApp"
            },
            "vpc_id": "vpc-09891bf00a5bb9b93"
          },
          "dependencies": [
            "aws_vpc.VotingAPP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-DockerApp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784905424441:route-table/rtb-08cdee3a18a862e0d",
            "id": "rtb-08cdee3a18a862e0d",
            "owner_id": "784905424441",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d09904f2d23fcae",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-DockerApp"
            },
            "tags_all": {
              "Name": "RT-DockerApp"
            },
            "timeouts": null,
            "vpc_id": "vpc-09891bf00a5bb9b93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.DockerVotApp",
            "aws_vpc.VotingAPP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfb2ad7c26910b68",
            "route_table_id": "rtb-08cdee3a18a862e0d",
            "subnet_id": "subnet-02bde2e6a6a308b05"
          },
          "dependencies": [
            "aws_internet_gateway.DockerVotApp",
            "aws_route_table.route-table-DockerApp",
            "aws_subnet.DockerApp",
            "aws_vpc.VotingAPP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "VotingRGAPP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784905424441:security-group/sg-0d2616e750b9b4c5d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2616e750b9b4c5d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "Docker-votting-RG",
            "name_prefix": "",
            "owner_id": "784905424441",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09891bf00a5bb9b93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VotingAPP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DockerApp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784905424441:subnet/subnet-02bde2e6a6a308b05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.1.0.0/24",
            "id": "subnet-02bde2e6a6a308b05",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784905424441",
            "vpc_id": "vpc-09891bf00a5bb9b93"
          },
          "dependencies": [
            "aws_vpc.VotingAPP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VotingAPP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784905424441:vpc/vpc-09891bf00a5bb9b93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.1.0.0/16",
            "default_network_acl_id": "acl-049e7cf73b9057f71",
            "default_route_table_id": "rtb-00e9d844f3ca22f0a",
            "default_security_group_id": "sg-0d95f3c0c0608356f",
            "dhcp_options_id": "dopt-724f6108",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09891bf00a5bb9b93",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00e9d844f3ca22f0a",
            "owner_id": "784905424441",
            "tags": {
              "Name": "Docker VPC"
            },
            "tags_all": {
              "Name": "Docker VPC"
            }
          }
        }
      ]
    }
  ]
}